[gd_scene load_steps=12 format=2]

[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Image/UI/main_bg.png" type="Texture" id=2]
[ext_resource path="res://Image/Space/star.png" type="Texture" id=3]
[ext_resource path="res://Font/32pt.tres" type="DynamicFont" id=4]
[ext_resource path="res://Image/UI/logo.png" type="Texture" id=5]
[ext_resource path="res://Image/UI/Start_2.png" type="Texture" id=6]
[ext_resource path="res://Image/UI/Start_1.png" type="Texture" id=7]
[ext_resource path="res://Image/UI/Exit_2.png" type="Texture" id=8]
[ext_resource path="res://Image/UI/Exit_1.png" type="Texture" id=9]
[ext_resource path="res://Other/Fade/FadeIn.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "space"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Background/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0784314 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Sprite" type="Sprite" parent="CanvasLayer/Background"]
modulate = Color( 1, 1, 1, 0.0784314 )
position = Vector2( 158.255, 112.432 )
texture = ExtResource( 3 )

[node name="Fullscreen" type="Label" parent="CanvasLayer/Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -107.0
margin_top = -34.0
custom_fonts/font = ExtResource( 4 )
text = "Press F"
valign = 1

[node name="Fullscreen2" type="Label" parent="CanvasLayer/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -103.0
margin_top = 20.0
margin_right = 103.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 4 )
text = "GAMINATOR #19"
valign = 1

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -439.0

[node name="Logo" type="TextureRect" parent="CanvasLayer/Control"]
margin_left = 35.5997
margin_top = 66.2993
margin_right = 561.6
margin_bottom = 382.299
texture = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Start" type="TextureButton" parent="CanvasLayer/Control"]
margin_left = 232.392
margin_top = 395.038
margin_right = 390.392
margin_bottom = 460.038
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )

[node name="Exit" type="TextureButton" parent="CanvasLayer/Control"]
margin_left = 254.631
margin_top = 470.929
margin_right = 412.631
margin_bottom = 530.929
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="FadeIn" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false

[node name="APlayer" type="AnimationPlayer" parent="."]
anims/space = SubResource( 1 )
[connection signal="pressed" from="CanvasLayer/Control/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Exit" to="." method="_on_Exit_pressed"]
